--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Locations Cocooning à Gérardmer – Chalets & Maisons</title>
-  <meta name="description" content="Locations saisonnières premium à Gérardmer, ambiance chalet, réservation en ligne, activités à proximité." />
-  <!-- Google Fonts -->
-  https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Montserrat:wght@400;600&display=swap
-  <!-- Styles -->
-  assets/css/styles.css
+  <meta name="description" content="Locations saisonnières premium à Gérardmer, ambiance chalet, réservation en ligne, activités à proximité.">
+  <!-- Google Fonts (chevrons droits, guillemets droits) -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Montserrat0&display=swap
+  <!-- CSS local (chemin relatif depuis la racine) -->
+  <link rel="stylesheet" href="assets/css/styles.css
 </head>
 <body>
   <!-- Header / Hero -->
