--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Google Fonts (chevrons droits, guillemets droits) -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Montserrat0&display=swap
   <!-- CSS local (chemin relatif depuis la racine) -->
-  <link rel="stylesheet" href="assets/css/styles.css
+  <link rel="stylesheet" href="assets/css/styles.css"
 </head>
 <body>
   <!-- Header / Hero -->
