--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
+  <!-- Métadonnées de base -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Locations Cocooning à Gérardmer – Chalets & Maisons</title>
-  <meta name="description" content="Locations saisonnières premium à Gérardmer.">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Montserrat:wght@400=swap
+  <meta name="description" content="Locations saisonnières premium à Gérardmer, ambiance chalet, réservation en ligne via Beds24, activités à proximité.">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfairt@500;700&family=Montserrat:wght@400;600&display=swap
+
+  <!-- CSS local (chemin relatif depuis la racine) -->
   assets/css/styles.css
 </head>
-
 <body>
   <!-- Header / Hero -->
   <header class="hero">
     <nav class="topbar">
-      index.htmlGérardmer • Cocooning</a>
+      <adex.htmlGérardmer • Cocooning</a>
       <ul class="menu">
         <li>#accueilAccueil</a></li>
         <li>#reservationsRéservations</a></li>
-        <li>#proximiteÀ proximité</a></li>
+        <li><a href="#proximiteté</a></li>
       </ul>
     </nav>
     <div class="hero__content">
@@ -36,7 +39,7 @@
         <h2>Bienvenue à Gérardmer</h2>
         <p>
           Nos hébergements offrent une expérience cocooning, idéale pour couples, familles et amis.
-          Réservez en quelques clics grâce à notre calendrier synchronisé (Airbnb & Booking via Beds24). 
+          Réservez en quelques clics grâce à notre calendrier synchronisé (Airbnb & Booking via Beds24).
         </p>
       </div>
     </section>
@@ -50,17 +53,16 @@
         <div class="cards">
           <!-- Logement 1 -->
           <article class="card">
-            assets/img/chalet-cedre-1.jpg
-            <div class="card__content">
+            <img src="assets/img/chalet-cedre-1.jpg" alt=" class="card__content">
               <h3>Chalet du Cèdre</h3>
               <ul class="tags">
                 <li>Chalet</li><li>4–6 pers.</li><li>Vue forêt</li>
               </ul>
               <p>Véritable cocon en bois, poêle à granulés, terrasse, à 5 min du lac.</p>
               <div class="card__actions">
-                logements/chalet-cedre.htmlDétails</a>
-                <button class="btn btn-primary" 
-                        data-widget="https://VOTRE_URL_WIDGET_BEDS24_CHLET" 
+                <a class="btn btn-secondary" href="log
+                <button class="btn btn-primary"
+                        data-widget="https://VOTRE_URL_WIDGET_BEDS24_CHLET"
                         aria-label="Réserver Chalet du Cèdre">
                   Réserver
                 </button>
@@ -70,7 +72,7 @@
 
           <!-- Logement 2 -->
           <article class="card">
-            assets/img/maison-lisiere-1.jpg
+            <img src="assets/imgsiere-1.jpg
             <div class="card__content">
               <h3>Maison de la Lisière</h3>
               <ul class="tags">
@@ -78,9 +80,8 @@
               </ul>
               <p>Grand séjour, cheminée, cuisine équipée, idéal familles, station à quelques minutes.</p>
               <div class="card__actions">
-                logements/maison-lisiere.htmlDétails</a>
-                <button class="btn btn-primary" 
-                        data-widget="https://VOTRE_URL_WIDGET_BEDS24_MAISON" 
+                <a class="btn btn-secondary" href="logements/maison-l    <button class="btn btn-primary"
+                        data-widget="https://VOTRE_URL_WIDGET_BEDS24_MAISON"
                         aria-label="Réserver Maison de la Lisière">
                   Réserver
                 </button>
@@ -110,11 +111,11 @@
           </div>
           <div class="activity">
             <h3>Cascades & randos</h3>
-            <p>Cascade de Tendon, Bas-Rupts, circuits forestiers, route des crêtes pour grands paysages.</p>
+            <p>Cascade de Tendon, Bas‑Rupts, boucles forestières, route des crêtes pour grands paysages.</p>
           </div>
         </div>
         <p class="note">
-          Idées basées sur les guides locaux et sites d’activités à Gérardmer (lac, ski Mauselaine, Mérelle, cascades). [5](https://www.laboxvoyageuse.fr/que-faire-gerardmer-activites-visites-vosges/)[6](https://auvergne-mobilite.fr/que-faire-a-gerardmer-activites/)[7](https://www.gerardmer-ski.com/fr/le-domaine-skiable/activites)
+          Idées basées sur les guides locaux et sites d’activités à Gérardmer (lac, ski Mauselaine, Mérelle, cascades).
         </p>
       </div>
     </section>
@@ -124,7 +125,7 @@
   <footer class="footer">
     <div class="container footer__grid">
       <p>© Gérardmer • Cocooning | Chalets & Maisons – Réservations en ligne</p>
-      <p><small>Le planning de réservation est fourni par Beds24 (widgets personnalisables et paiements en ligne). [3](https://migrateshop.com/vacation-rental-script/)</small></p>
+      <p><small>Le planning de réservation est fourni par Beds24 (widgets personnalisables et paiements en ligne).</small></p>
     </div>
   </footer>
 
@@ -137,6 +138,7 @@
     <div class="modal__backdrop"></div>
   </div>
 
-  assets/js/main.js</script>
+  <!-- JS local -->
+  <script src="n.js</script>
 </body>
 </html>
