--- a/logements/chalet-cedre.html
+++ b/logements/chalet-cedre.html
@@ -2,10 +2,14 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chalet du Cèdre – Gérardmer</title>
-  https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Montserrat:wght@400;600&display=swap
+  <meta name="description" content="Chalet du Cèdre à Gérardmer : 4–6 pers., terrasse, poêle à granulés, ambiance cocooning. Réservation en ligne.">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?familysplay:wght@500;700&family=Montserrat:wght@400;600&display=swap
+  <!-- CSS relative depuis le sous-dossier logements -->
   ../assets/css/styles.css
 </head>
 <body>
@@ -27,9 +31,8 @@
         </header>
 
         <div class="gallery">
-          ../assets/img/chalet-cedre-1.jpg
-          ../assets/img/chalet-cedre-2.jpg
-        </div>
+          <img src="..//chalet-cedre-1.jpg
+          <img src="../assets/img/chalet-cedre-    </div>
 
         <section class="listing__details">
           <h2>Descriptif</h2>
@@ -44,7 +47,7 @@
           </ul>
 
           <div class="cta">
-            <button class="btn btn-primary" 
+            <button class="btn btn-primary"
                     data-widget="https://VOTRE_URL_WIDGET_BEDS24_CHLET">
               Réserver
             </button>
@@ -54,7 +57,7 @@
     </div>
   </main>
 
-  <!-- Modal partagé (mêmes styles que index) -->
+  <!-- Modal partagé -->
   <div id="bookingModal" class="modal" aria-hidden="true">
     <div class="modal__dialog" role="dialog" aria-modal="true" aria-label="Calendrier de réservation">
       <button class="modal__close" aria-label="Fermer">×</button>
