--- a/logements/maison-lisiere.html
+++ b/logements/maison-lisiere.html
@@ -2,10 +2,14 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Maison de la Lisière – Gérardmer</title>
+  <meta name="description" content="Maison de la Lisière : 6–8 pers., cheminée, proche pistes de la Mauselaine. Réservation en ligne.">
+
+  <!-- Fonts -->
   https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Montserrat:wght@400;600&display=swap
+  <!-- CSS relative depuis le sous-dossier logements -->
   ../assets/css/styles.css
 </head>
 <body>
@@ -44,7 +48,7 @@
           </ul>
 
           <div class="cta">
-            <button class="btn btn-primary" 
+            <button class="btn btn-primary"
                     data-widget="https://VOTRE_URL_WIDGET_BEDS24_MAISON">
               Réserver
             </button>
@@ -54,6 +58,7 @@
     </div>
   </main>
 
+  <!-- Modal partagé -->
   <div id="bookingModal" class="modal" aria-hidden="true">
     <div class="modal__dialog" role="dialog" aria-modal="true" aria-label="Calendrier de réservation">
       <button class="modal__close" aria-label="Fermer">×</button>
