--- a/index.html
+++ b/index.html
@@ -2,89 +2,63 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <!-- Métadonnées de base -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Locations Cocooning à Gérardmer – Chalets & Maisons</title>
   <meta name="description" content="Locations saisonnières premium à Gérardmer, ambiance chalet, réservation en ligne via Beds24, activités à proximité.">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfairt@500;700&family=Montserrat:wght@400;600&display=swap
-
-  <!-- CSS local (chemin relatif depuis la racine) -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Montserrat:wght@400;600&display=swap" rell : chemin relatif depuis la racine du dépôt -->
   assets/css/styles.css
 </head>
 <body>
-  <!-- Header / Hero -->
   <header class="hero">
     <nav class="topbar">
-      <adex.htmlGérardmer • Cocooning</a>
+      <a class="brand"mer • Cocooning</a>
       <ul class="menu">
         <li>#accueilAccueil</a></li>
-        <li>#reservationsRéservations</a></li>
-        <li><a href="#proximiteté</a></li>
+        <li><aeservationsRéservations</a></li>
+        <li>#proximiteÀ proximité</a></li>
       </ul>
     </nav>
     <div class="hero__content">
       <h1>Chalets & Maisons premium au cœur des Vosges</h1>
-      <p>Ambiance chaleureuse, bois & pierre, linge douillet, vue sur forêt – vivez Gérardmer autrement.</p>
+      <p>Ambiance chaleureuse, bois & pierre, linge douillet, vue sur forêt.</p>
       #reservationsVoir les logements</a>
     </div>
   </header>
 
   <main>
-    <!-- Accueil -->
     <section id="accueil" class="section section--light">
       <div class="container">
         <h2>Bienvenue à Gérardmer</h2>
-        <p>
-          Nos hébergements offrent une expérience cocooning, idéale pour couples, familles et amis.
-          Réservez en quelques clics grâce à notre calendrier synchronisé (Airbnb & Booking via Beds24).
-        </p>
+        <p>Réservez en quelques clics grâce à notre calendrier synchronisé (Airbnb & Booking via Beds24).</p>
       </div>
     </section>
 
-    <!-- Réservations : cartes logements -->
     <section id="reservations" class="section">
       <div class="container">
         <h2>Réservations</h2>
-        <p>Choisissez votre logement, consultez les détails et réservez en ligne.</p>
-
         <div class="cards">
-          <!-- Logement 1 -->
           <article class="card">
-            <img src="assets/img/chalet-cedre-1.jpg" alt=" class="card__content">
+            <imgts/img/chalet-cedre-1.jpg
+            <div class="card__content">
               <h3>Chalet du Cèdre</h3>
-              <ul class="tags">
-                <li>Chalet</li><li>4–6 pers.</li><li>Vue forêt</li>
-              </ul>
-              <p>Véritable cocon en bois, poêle à granulés, terrasse, à 5 min du lac.</p>
+              <ul class="tags"><li>Chalet</li><li>4–6 pers.</li><li>Vue forêt</li></ul>
+              <p>Poêle à granulés, terrasse, à 5 min du lac.</p>
               <div class="card__actions">
-                <a class="btn btn-secondary" href="log
-                <button class="btn btn-primary"
-                        data-widget="https://VOTRE_URL_WIDGET_BEDS24_CHLET"
-                        aria-label="Réserver Chalet du Cèdre">
-                  Réserver
-                </button>
+                <a class="btn btn-secondary" href="logements           <button class="btn btn-primary" data-widget="https://VOTRE_URL_WIDGET_BEDS24_CHLET">Réserver</button>
               </div>
             </div>
           </article>
 
-          <!-- Logement 2 -->
           <article class="card">
-            <img src="assets/imgsiere-1.jpg
-            <div class="card__content">
+            <img src="assets/img/maison-lisiere-1.jpg" alt="Maison de la Lisièret">
               <h3>Maison de la Lisière</h3>
-              <ul class="tags">
-                <li>Maison</li><li>6–8 pers.</li><li>Proche pistes</li>
-              </ul>
-              <p>Grand séjour, cheminée, cuisine équipée, idéal familles, station à quelques minutes.</p>
+              <ul class="tags"><li>Maison</li><li>6–8 pers.</li><li>Proche pistes</li></ul>
+              <p>Grand séjour, cheminée, cuisine équipée, station à quelques minutes.</p>
               <div class="card__actions">
-                <a class="btn btn-secondary" href="logements/maison-l    <button class="btn btn-primary"
-                        data-widget="https://VOTRE_URL_WIDGET_BEDS24_MAISON"
-                        aria-label="Réserver Maison de la Lisière">
-                  Réserver
-                </button>
+                <a class="btn btn-secondary" href="logements             <button class="btn btn-primary" data-widget="https://VOTRE_URL_WIDGET_BEDS24_MAISON">Réserver</button>
               </div>
             </div>
           </article>
@@ -92,44 +66,27 @@
       </div>
     </section>
 
-    <!-- À proximité : activités -->
     <section id="proximite" class="section section--light">
       <div class="container">
         <h2>À proximité – activités à Gérardmer</h2>
         <div class="grid">
-          <div class="activity">
-            <h3>Lac de Gérardmer</h3>
-            <p>Balade, paddle, pédalo, kayak, plages en été – le grand classique au cœur de la « Perle des Vosges ».</p>
-          </div>
-          <div class="activity">
-            <h3>Station La Mauselaine</h3>
-            <p>Ski alpin et nocturne, luge, raquettes, animations familiales sur un domaine polyvalent.</p>
-          </div>
-          <div class="activity">
-            <h3>Belvédère de Mérelle</h3>
-            <p>Petite ascension et tour en bois pour panorama carte postale sur le lac et la ville.</p>
-          </div>
-          <div class="activity">
-            <h3>Cascades & randos</h3>
-            <p>Cascade de Tendon, Bas‑Rupts, boucles forestières, route des crêtes pour grands paysages.</p>
-          </div>
+          <div class="activity"><h3>Lac de Gérardmer</h3><p>Balade, paddle, pédalo, kayak.</p></div>
+          <div class="activity"><h3>Station La Mauselaine</h3><p>Ski alpin, luge, raquettes.</p></div>
+          <div class="activity"><h3>Belvédère de Mérelle</h3><p>Panorama sur le lac et la ville.</p></div>
+          <div class="activity"><h3>Cascades & randos</h3><p>Tendon, Bas‑Rupts, route des crêtes.</p></div>
         </div>
-        <p class="note">
-          Idées basées sur les guides locaux et sites d’activités à Gérardmer (lac, ski Mauselaine, Mérelle, cascades).
-        </p>
       </div>
     </section>
   </main>
 
-  <!-- Footer -->
   <footer class="footer">
     <div class="container footer__grid">
-      <p>© Gérardmer • Cocooning | Chalets & Maisons – Réservations en ligne</p>
-      <p><small>Le planning de réservation est fourni par Beds24 (widgets personnalisables et paiements en ligne).</small></p>
+      <p>© Gérardmer • Cocooning | Chalets & Maisons</p>
+      <p><small>Planning de réservation fourni par Beds24.</small></p>
     </div>
   </footer>
 
-  <!-- Modal de réservation (iframe Beds24) -->
+  <!-- Modal de réservation -->
   <div id="bookingModal" class="modal" aria-hidden="true">
     <div class="modal__dialog" role="dialog" aria-modal="true" aria-label="Calendrier de réservation">
       <button class="modal__close" aria-label="Fermer">×</button>
@@ -139,6 +96,6 @@
   </div>
 
   <!-- JS local -->
-  <script src="n.js</script>
+  assets/js/main.js</script>
 </body>
 </html>
