--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <!-- Header / Hero -->
   <header class="hero">
     <nav class="topbar">
-      index.htmlGérardmer • Cocooning</a>
+      <adex.htmlGérardmer • Cocooning</a>
       <ul class="menu">
-        <li>#accueilAccueil</a></li>
+        <li><a href="#accil</a></li>
         <li>#reservationsRéservations</a></li>
-        <li><a href="#proroximité</a></li>
+        <li>#proximiteÀ proximité</a></li>
       </ul>
     </nav>
     <div class="hero__content">
@@ -53,12 +53,10 @@
         <div class="cards">
           <!-- Logement 1 -->
           <article class="card">
-            assets/img/chalet-cedre-1.jpg
+            <img src="assets/imgdre-1.jpg
             <div class="card__content">
               <h3>Chalet du Cèdre</h3>
-              <ul class="tags">
-                <li>Chalet</li><li>4–6 pers.</li><li>Vue forêt</li>
-              </ul>
+              <ul class="tags"><li>Chalet</li><li>4–6 pers.</li><li>Vue forêt</li></ul>
               <p>Véritable cocon en bois, poêle à granulés, terrasse, à 5 min du lac.</p>
               <div class="card__actions">
                 logements/chalet-cedre.htmlDétails</a>
@@ -73,12 +71,9 @@
 
           <!-- Logement 2 -->
           <article class="card">
-            assets/img/maison-lisiere-1.jpg
-            <div class="card__content">
+            <img src="assets/img/maison-lisiere-1.jpg" alt="Maison de la Lisièret">
               <h3>Maison de la Lisière</h3>
-              <ul class="tags">
-                <li>Maison</li><li>6–8 pers.</li><li>Proche pistes</li>
-              </ul>
+              <ul class="tags"><li>Maison</li><li>6–8 pers.</li><li>Proche pistes</li></ul>
               <p>Grand séjour, cheminée, cuisine équipée, idéal familles, station à quelques minutes.</p>
               <div class="card__actions">
                 logements/maison-lisiere.htmlDétails</a>
@@ -99,22 +94,10 @@
       <div class="container">
         <h2>À proximité – activités à Gérardmer</h2>
         <div class="grid">
-          <div class="activity">
-            <h3>Lac de Gérardmer</h3>
-            <p>Balade, paddle, pédalo, kayak, plages en été – le grand classique au cœur de la « Perle des Vosges ».</p>
-          </div>
-          <div class="activity">
-            <h3>Station La Mauselaine</h3>
-            <p>Ski alpin et nocturne, luge, raquettes, animations familiales sur un domaine polyvalent.</p>
-          </div>
-          <div class="activity">
-            <h3>Belvédère de Mérelle</h3>
-            <p>Petite ascension et tour en bois pour panorama carte postale sur le lac et la ville.</p>
-          </div>
-          <div class="activity">
-            <h3>Cascades &amp; randonnées</h3>
-            <p>Cascade de Tendon, Bas‑Rupts, boucles forestières, route des crêtes pour grands paysages.</p>
-          </div>
+          <div class="activity"><h3>Lac de Gérardmer</h3><p>Balade, paddle, pédalo, kayak.</p></div>
+          <div class="activity"><h3>Station La Mauselaine</h3><p>Ski alpin, luge, raquettes.</p></div>
+          <div class="activity"><h3>Belvédère de Mérelle</h3><p>Panorama sur le lac et la ville.</p></div>
+          <div class="activity"><h3>Cascades &amp; randonnées</h3><p>Tendon, Bas‑Rupts, route des crêtes.</p></div>
         </div>
       </div>
     </section>
@@ -138,6 +121,6 @@
   </div>
 
   <!-- JS local -->
-  <script src="assets/jsipt>
+  assets/js/main.js</script>
 </body>
 </html>
